--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.2",
-    "express": "^5.2.1"
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
+    "mysql2": "^3.17.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
