--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.13.5",
     "body-parser": "^2.2.2",
     "express": "^5.2.1",
     "pinia": "^3.0.3",
